--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ h6 {
 .leaflet-control-custom {
   padding: 6px 8px;
   background: white;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.4);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.4);
   color: #333;
   border-radius: 5px;
 }
@@ -64,7 +64,7 @@ form {
   height: 16px;
   float: left;
   margin-right: 8px;
-  border-bottom: 1px solid rgba(0,0,0,0);
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
 }
 
 .leaflet-popup-content {
@@ -93,7 +93,7 @@ form {
 .loader:after {
   position: absolute;
   top: 0;
-  content: '';
+  content: "";
 }
 .loader:before {
   left: -1.5em;
@@ -147,7 +147,9 @@ form {
  * opacity, so that search, locate, and zoom buttons do not overlay the title,
  * creating an effect as if the title is located on top, and not the left column.
  */
-.leaflet-right .map-title { display: none; }
+.leaflet-right .map-title {
+  display: none;
+}
 
 @media only screen and (max-width: 760px) {
   .leaflet-right .map-title {
@@ -275,7 +277,9 @@ span.legend-icon {
 }
 
 .ladder {
-  width: 180px;
+  width: auto;
+  min-width: 180px;
+  max-width: 250px;
   margin-top: 0 !important;
   overflow: hidden;
 }
@@ -286,6 +290,7 @@ span.legend-icon {
   display: none !important;
 }
 
-.ladder form, .ladder div {
+.ladder form,
+.ladder div {
   display: block;
 }
